# spitz-news-mikke

./: .gitignore  GEMINI.md  README.md  compose.yaml  env.json  mise.toml  pyproject.toml  samconfig.toml  template.yaml
docs/: architecture.md
events/: schedule_event.json
scripts/: localstack-init.sh  test-local.sh
src/: app.py  requirements.txt
tests/: test_app.py
